# redismodule-rs-template

./: .gitignore  .gitmodules  Cargo.toml  README.md  cargo-generate.toml  pre-script.rhai  run-test.sh
src/: command.rs  lib.rs  test.rs  utils.rs
tests/pytest/: includes.py  test.py  tests.sh
{{project-name}}/: Cargo.toml
{{project-name}}-core/: Cargo.toml
{{project-name}}-model/: Cargo.toml
{{project-name}}-utils/: Cargo.toml
{{project-name}}/src/: command.rs  lib.rs
