[package]
name = "{{project-name}}-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-module = "2.0.7"
{{project-name}}-model = { path = "../{{project-name}}-model" }
{{project-name}}-utils = { path = "../{{project-name}}-utils" }
